--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,9 @@
   <body>
     <div id="app"></div>
     <script>
-      Elm.Main.embed(document.getElementById("app"))
+      const app = Elm.Main.embed(document.getElementById("app"), {
+        randomSeed: Math.floor(Math.random()*0xFFFFFFFF)
+      });
     </script>
   </body>
 </html>
